<resources>
    <string name="app_name">StartupWeekWorkshopAndroid</string>
    <string name="action_settings">Settings</string>
    <string name="todos">Todos</string>
    <string name="users">Users</string>
    <string name="complete">Complete</string>
    <string name="please_confirm">Please input and confirm informaion</string>
    <string name="ok">Ok</string>
    <string name="error_logging_in">Error Logging In</string>
    <string name="or_login">Or Login</string>
    <string name="welcome">Welcome To Detroit Startup Week!</string>
    <string name="detroit_android">Detroit Android</string>
    <string name="create_reminder">Create Reminder</string>
    <string name="title_hint">Title</string>
    <string name="description_of_your_reminder">Description of your reminder</string>
    <string name="timestamp_placeholder">2019–06–18 01:36:08.942</string>
    <string name="delete_reminder">Delete Reminder</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="title_placeholder">Visit Grandma</string>
    <string name="descritpion_placeholder">Time to see grandma</string>
    <string name="in_progress">In Progress</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="reminders">Reminders</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="error_signing_up">Error Signing Up</string>
    <string name="generic_reminder_error">Error</string>
    <string name="edit_reminder">Edit Reminder</string>
    <string name="confirm_delete">Confirm Delete</string>
    <string name="confirm_delete_message">Are you sure you want to delete this reminder?</string>
    <string name="please_wait">Please Wait...</string>
    <string name="add_delete_edit">Add, delete, or edit a reminder here</string>
</resources>
