<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/listItemLayout"
        android:background="?android:attr/selectableItemBackground"
>
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/content_list_border"
            android:elevation="@dimen/default_elevation"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
    >

    <TextView
            android:id="@+id/listItemTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_placeholder"
            android:padding="@dimen/default_padding"
            android:layout_margin="@dimen/default_tv_margin"
            android:textSize="@dimen/title_tv_text_size"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/listItemDescription"
            app:layout_constraintStart_toStartOf="parent"
            />

    <TextView
            android:id="@+id/listItemDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/descritpion_placeholder"
            android:padding="@dimen/default_padding"
            android:layout_margin="@dimen/default_tv_margin"
            android:textSize="@dimen/description_tv_size"
            app:layout_constraintTop_toBottomOf="@id/listItemTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
    />

    <TextView
            android:id="@+id/listItemTimeStamp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/timestamp_placeholder"
            android:padding="@dimen/default_padding"
            android:layout_margin="@dimen/default_tv_margin"
            android:textSize="@dimen/default_tv_text_size_small"
            app:layout_constraintTop_toBottomOf="@id/listItemDescription"
            app:layout_constraintEnd_toEndOf="parent"
    />
        <TextView
                android:id="@+id/listItemStatus"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/in_progress"
                android:textColor="@android:color/holo_red_dark"
                android:padding="@dimen/default_padding"
                android:layout_margin="@dimen/default_tv_margin"
                android:textSize="@dimen/default_tv_text_size_small"
                app:layout_constraintTop_toBottomOf="@id/listItemDescription"
                app:layout_constraintStart_toStartOf="parent"
        />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>