<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/mainActivity"
        android:background="#ffffff"
        tools:context=".MainActivity"
        android:noHistory = "true"
>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:theme="@style/AppTheme.AppBarOverlay"
            app:layout_constraintTop_toTopOf="parent"
    >

        <Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:title="@string/detroit_android"
                android:elevation="@dimen/default_toolbar_elevation"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/AppTheme.PopupOverlay"
        />
    </com.google.android.material.appbar.AppBarLayout>

        <ProgressBar
                android:id="@+id/mainProgressBar"
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:progressDrawable="@drawable/circular_progress_bar"
                android:layout_centerHorizontal="true"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:visibility="gone"
        />

    <TextView
            android:id="@+id/welcomeTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textColor="#000000"
            android:layout_margin="@dimen/welcome_tv_margin"
            android:maxLines="2"
            android:textSize="@dimen/welcome_text_size"
            android:padding="@dimen/default_padding"
            android:typeface="serif"
            android:text="@string/welcome"
            app:layout_constraintTop_toBottomOf="@id/appBarLayout"
            app:layout_constraintBottom_toTopOf="@id/signUpButtonMain"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
    />

    <Button
            android:id="@+id/signUpButtonMain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="@dimen/default_elevation"
            android:layout_margin="@dimen/fab_margin"
            android:text="@string/sign_up"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/mainLoginTV"
    />

    <TextView
            android:id="@+id/mainLoginTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_margin="@dimen/login_tv_margin"
            android:textSize="@dimen/login_text_size"
            android:padding="@dimen/default_padding"
            android:text="@string/or_login"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
    />
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>
